# StyledConsole

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_SPLIT_PLAN.md  Makefile  README.md  SECURITY.md  VERIFICATION_REPORT.md  check_banner_width.py  check_width.py  dashboard_export.html  emoji_comparison.html  full_output.txt  output.txt  pyproject.toml  test_align.py  test_align2.py  test_console_justify.py  test_exact.py  test_examples.py  test_frame_ansi_analysis.py  test_nested.py  test_no_border_gradient.py  test_rich_justify_visual.py  test_rich_padding.py  test_rich_proper_integration.py  verify_layout.py
.claude/: ralph-loop.local.md
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
doc/: BORDER_GRADIENTS.md  CSS4-COLORS.md  DOCUMENTATION_POLICY.md  EARLY_IMPROVEMENT_PLAN.md  EMOJI-STRATEGY.md  EMOJI_GUIDELINES.md  FRAME_WIDTH_TIPS.md  GPT5-codebase-review.md  GRADIENT_IMPLEMENTATION.md  GRADIENT_RAINBOW_COMPARISON.md  Gemini_codebase-review_v2.md  LEGACY_ANALYSIS_AND_IMPROVEMENTS.md  PHASE4_ANALYSIS.md  PHASE4_RESEARCH_PLAN.md  PLAN.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_v2.md  REFACTORING_SUMMARY.md  ROADMAP.md  SPECIFICATION.md  TASKS.md  UX_TESTING_SUMMARY.md  UX_VALIDATION_REPORT.md  VARIATION_SELECTOR_ISSUE.md  improvement_proposals.md
doc/guides/: ANIMATED_GRADIENTS.md  BORDER_GRADIENTS.md  COLOR_STANDARDIZATION.md  EMOJI-STRATEGY.md  EMOJI_GUIDELINES.md  EMOJI_RENDERING.md  GRADIENT_EFFECTS.md  THICK_STYLE.md
doc/migration/: v0.1_to_v0.3.md
doc/notes/: CHANGELOG_2025-10-18.md  CLEANUP-SUMMARY.md  CONSOLE_API_IMPROVEMENTS.md  DOCUMENTATION_ORGANIZATION_OCT20.md  DOC_UPDATE_2025-10-18.md  FINAL-CORRECTIONS.md  LIBRARY-RENAME.md  PROJECT-SUMMARY.md  README.md  (+11 more)
docs/: BEST_PRACTICES.md  DEVELOPER_GUIDE.md  DOCUMENTATION_POLICY.md  DX_BEST_PRACTICES.md  GALLERY.md  GETTING_STARTED.md  IMAGE_EXPORTER_SPEC.md  PRESETS.md  PROJECT_STATUS.md  README.md  STRATEGIC_PLAN.md  THREAD_SAFETY.md  USER_GUIDE.md
examples/: README.md  demo_animation.py  quick_start.py  run_all.py  run_all_visual.py  run_examples.py
scripts/: complexity_check.py
tests/: test_effects.py  test_font_loader.py
(+276 files in other folders)
